# clientos

./: .env.example  .gitattributes  .gitignore  AGENTS.md  HANDOFF.md  README.md  main.py  product_updates.jsonl  pyproject.toml
.continue/: config.json
prompts/: ETF_SENTIMENT.md  PROSPECT.md
railway-functions/: operator-daily.ts  prospect-hourly.ts
scripts/: audit_production_env.py  deploy_api.sh  deploy_operator_briefing_cron.sh  deploy_prod.sh  deploy_prospect_cron.sh  deploy_web.sh  dev.sh  get_telegram_chat_id.py  install_local_automation.sh  local_automation_status.py  log_product_update.py  run_daily_operator_briefing.py  run_local_automation.py  start_railway.sh  test_telegram_send.py  uninstall_local_automation.sh
tests/: test_api_app.py  test_api_observability.py  test_application_use_case.py  test_auth_architecture.py  test_automation_application.py  test_automation_runtime.py  test_crm_import.py  test_crm_postgres_repository.py  test_crm_runtime.py  test_discord_discussion_source.py  test_discord_lead_source.py  test_duckduckgo_site_search.py  test_etf_sentiment_runtime.py  test_file_operator_insights_repository.py  test_founder_code_runtime.py  test_openai_crm_spreadsheet_assist.py  test_openai_etf_sentiment_agent.py  test_openai_prospect_drafter.py  test_operator_briefing.py  test_operator_briefing_runtime.py  test_package_imports.py  test_personalization_repository.py  test_production_env_audit_script.py  test_prospecting_domain.py  test_prospecting_runtime.py  test_prospecting_use_case.py  test_spreadsheet_file_adapter.py  test_telegram_notifier.py  (+3 more)
(+110 files in other folders)
