[project]
name = "trade"
version = "0.1.0"
description = "Market crash monitoring dashboard with de-risk and dip-buy signals"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "streamlit>=1.44.1",
    "yfinance>=0.2.56",
]
